i added a class to the html

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores natus animi mod
 <a href="img/wedding.img.jpg">wedding picture</a>
 <a href="./../wedding.img.jpg">brains</a>
 <img src="img/dog.img" alt="a cute dog">
-
-
-
+<id class="worla"></id>
 
 </body>
 </html>
